--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "boxicons": "^2.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.3.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
