--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
-    "redux-logger": "^3.0.6"
+    "react-slick": "^0.29.0",
+    "redux-logger": "^3.0.6",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
