--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "boxicons": "^2.1.2",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.3.0",
@@ -14,7 +15,8 @@
     "react-scripts": "^2.1.3",
     "react-slick": "^0.29.0",
     "redux-logger": "^3.0.6",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
