--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "query-string": "^7.1.1",
-    "sequelize": "^6.20.1"
+    "sequelize": "^6.20.1",
+    "volleyball": "^1.5.1"
   }
 }
